<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Go! GPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_sync">Sincronizar</string>
    <string name="falha_local">Falha ao receber localização</string>
    <string name="no_internet">Sem conexão com a internet!</string>
    <string name="sync">Sincronizando</string>

    <string name="read_terms">Leia os termos</string>

    <string name="action_map_type_normal">Normal</string>
    <string name="action_map_type_satellite">Satélite</string>
    <string name="action_map_type_hybrid">Hibrído</string>
    <string name="action_map_type_terrain">Terreno</string>
    <string name="terms">Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis.
        Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis.
        Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra
        quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti
        palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia
        ce receita de bolis, mais bolis eu num gostis.\n\nSuco de cevadiss, é um leite divinis,
        qui tem lupuliz, matis, aguis e fermentis.
        Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat,
        aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar
        pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo.
        Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus
        velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris
        lectus, non scelerisque augue. Aenean justo massa.
        </string>
    <string name="verify_your_conection">Verifique sua conexão.</string>
    <string name="loading">Carregando...</string>
</resources>
