<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_map_type_normal"
        android:title="@string/action_map_type_normal"
        android:icon="@android:drawable/ic_dialog_map"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_map_type_satellite"
        android:title="@string/action_map_type_satellite"
        android:icon="@android:drawable/ic_dialog_map"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_map_type_hybrid"
        android:title="@string/action_map_type_hybrid"
        android:icon="@android:drawable/ic_dialog_map"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_map_type_terrain"
        android:title="@string/action_map_type_terrain"
        android:icon="@android:drawable/ic_dialog_map"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
